[Fix bug 1005221] restored z-index

--- a/mozillians/static/mozillians/css/main.less
+++ b/mozillians/static/mozillians/css/main.less
@@ -1457,6 +1457,7 @@ form {
                     opacity: 0;
                     visibility: hidden;
                     width: 150px;
+                    z-index:10;
                     position: absolute;
                     top: -5px;
                     left: 0px;
